--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
   <head>
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css"> 
-	<link href="C:\Users\Laura\Google Drive\Coding\practice.css	" rel="stylesheet"/>  
+	<link href="https://raw.githubusercontent.com/lgwinn/GMUMUN/master/homepage.css" rel="stylesheet"/>  
   </head>
   
   <body>
